# coding-robot

./: .gitignore
xe_ne_vat_can/: Final1.docx  HUONG_DAN.md
xe_ne_vat_can/arduino/motor_bridge/: motor_bridge.ino
xe_ne_vat_can/ros2_ws/src/strawberry_bot/: package.xml  setup.cfg  setup.py
xe_ne_vat_can/ros2_ws/src/strawberry_bot/launch/: avoid_demo.launch.py
xe_ne_vat_can/ros2_ws/src/strawberry_bot/strawberry_bot/: base_bridge.py  obstacle_avoider.py
